Address review feedback in search-space power reporting